feat(knowledge-base): Add Java Wheel of Fortune project and parsing infrastructure
- Integrate Wheel of Fortune Java project into repository
- Add new language parsing modules for Java source code
- Create knowledge base indexing files for Wheel of Fortune project
- Update .gitignore to exclude additional configuration files
- Implement new test files for Java parser and repository analysis
- Add Tree-sitter Java parsing support
- Extend KnowledgeBase component with new parsing capabilities
Enables comprehensive source code analysis and indexing for Java projects, with specific focus on the Wheel of Fortune game implementation.

--- a/SPRINT Tool/requirements.txt
+++ b/SPRINT Tool/requirements.txt
@@ -82,5 +82,6 @@ yarl==1.15.2
 zipp==3.20.2
 tree-sitter==0.21.3
 tree-sitter-python==0.21.0
+tree-sitter-java==0.21.0
 faiss-cpu==1.8.0
 neo4j==5.25.0
