--- a/INSIGHT Tool/requirements.txt
+++ b/INSIGHT Tool/requirements.txt
@@ -62,3 +62,11 @@ tqdm==4.67.1
 
 # Hashing
 xxhash==3.5.0
+
+# LLM & Agents (Phase 2)
+google-generativeai==0.8.3
+langchain==0.3.7
+langchain-community==0.3.7
+langchain-core>=0.3.17
+langchain-google-genai
+langgraph==0.2.45
