Remove obsolete Knowledge Base specs and refactor module
Deleted legacy specification and planning documents for the Knowledge Base System and removed unused utility modules. Refactored KnowledgeBase feature components by removing deprecated files, renaming parser.py to python_parser.py, and updating related imports. Updated main and event handler modules to reflect these changes.

--- a/INSIGHT Tool/requirements.txt
+++ b/INSIGHT Tool/requirements.txt
@@ -26,6 +26,10 @@ tree-sitter-java==0.21.0
 faiss-cpu==1.8.0
 numpy==1.24.4
 
+# Embedding Models
+torch==2.5.1
+transformers==4.46.3
+
 # Graph Database (for Knowledge Base)
 neo4j==5.25.0
 pytz==2024.2
