Update evaluation script and docs for bug localization
Refines the bug localization evaluation script to improve file path handling, expands metrics to include k=10, and removes unnecessary monkey patching. Updates documentation to clarify workflow, usage, and output formatting. Removes obsolete evaluation and dataset utility scripts, and adds the latest evaluation results file.

--- a/.gitignore
+++ b/.gitignore
@@ -183,6 +183,7 @@ cython_debug/
 .kiro
 
 Data_Storage
+temp_dataset_repos/
 temp_repos/
 *INSIGHT Tool/insight_repos/
 *INSIGHT Tool/telemetry_logs/
