--- a/INSIGHT Tool/docker-compose.yml
+++ b/INSIGHT Tool/docker-compose.yml
@@ -4,14 +4,17 @@ services:
   insight-tool:
     build: .
     ports:
-      - "5000:5000"
+      - "${PORT:-5000}:5000"
+    restart: always
+    env_file:
+      - .env
     environment:
-      - FLASK_ENV=production
-      - FLASK_DEBUG=False
-      - POOL_PROCESSOR_MAX_WORKERS=4
+      - FLASK_ENV=${FLASK_ENV:-production}
+      - FLASK_DEBUG=${FLASK_DEBUG:-False}
+      - POOL_PROCESSOR_MAX_WORKERS=${POOL_PROCESSOR_MAX_WORKERS:-4}
       - NEO4J_URI=bolt://neo4j:7687
-      - NEO4J_USER=neo4j
-      - NEO4J_PASSWORD=password
+      - NEO4J_USER=${NEO4J_USER:-neo4j}
+      - NEO4J_PASSWORD=${NEO4J_PASSWORD:-password}
       - REPO_STORAGE_PATH=/app/Data_Storage/Repositories
     volumes:
       - ./Data_Storage:/app/Data_Storage
@@ -22,11 +25,12 @@ services:
 
   neo4j:
     image: neo4j:5.15.0
+    restart: always
     ports:
       - "7474:7474"
       - "7687:7687"
     environment:
-      - NEO4J_AUTH=neo4j/password
+      - NEO4J_AUTH=${NEO4J_USER:-neo4j}/${NEO4J_PASSWORD:-password}
     volumes:
       - neo4j_data:/data
 
