Update server config and async-timeout version
Added PORT environment variable to docker-compose.yml and set Flask app to listen on all interfaces. Downgraded async-timeout in requirements.txt from 5.0.1 to 4.0.3 for compatibility.

--- a/INSIGHT Tool/docker-compose.yml
+++ b/INSIGHT Tool/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - FLASK_ENV=${FLASK_ENV:-production}
       - FLASK_DEBUG=${FLASK_DEBUG:-False}
       - POOL_PROCESSOR_MAX_WORKERS=${POOL_PROCESSOR_MAX_WORKERS:-4}
+      - PORT=5000
       - NEO4J_URI=bolt://neo4j:7687
       - NEO4J_USER=${NEO4J_USER:-neo4j}
       - NEO4J_PASSWORD=${NEO4J_PASSWORD:-password}
